move top of background down to avoid being cut off

--- a/common/stats.css
+++ b/common/stats.css
@@ -48,7 +48,7 @@ body{
 	width: 100%;
 	background: #230d0d;
 	background-image: url("../images/BF4back.jpg");
-	background-position: top center;
+	background-position: center 168px;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	font-family: Arial, Arial, Arial, sans-serif;
